--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,8 +14,5 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "openai": "^3.2.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
   }
 }
