--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gpt-3-encoder": "^1.1.4",
     "openai": "^3.2.1"
   }
 }
